# hello-opengl

./: .gitignore  CMakeLists.txt  hello.frag  hello.vert  main.cpp  start.sh
glad/: glad.c
include/: noob.hpp  shader.hpp  stb_image.h
src/: noob.cpp  shader.cpp
